Se agrego la funcionalidad de subir fotos en los posts
